--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
       DOCKER_INFLUXDB_INIT_USERNAME: wilson
       DOCKER_INFLUXDB_INIT_PASSWORD: 123456123456
       DOCKER_INFLUXDB_INIT_ORG: my-org
-      DOCKER_INFLUXDB_INIT_BUCKET: node_object
+      DOCKER_INFLUXDB_INIT_BUCKET: schedule
       DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: my-super-influxdb-auth-token
     healthcheck:
       test: [ "CMD", "curl", "influxdb:8086/api/v2/ping" ]
@@ -55,6 +55,14 @@ services:
       DB_USER: wilson
       DB_PASSWORD: 123456
       DB_DB: schedule
+      INFLUXDB_HOST: influxdb
+      INFLUXDB_ORG: my-org
+      INFLUXDB_BUCKET: schedule
+      INFLUXDB_TOKEN: my-super-influxdb-auth-token
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_DB: 1
+
     ports:
       - 5487:5487
     volumes:
